--- a/app/src/main/res/layout/activity_fertilizer_price.xml
+++ b/app/src/main/res/layout/activity_fertilizer_price.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Screens.PesticidesActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg_dark">
 
     <ImageView
         android:id="@+id/imageView6"
