--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -165,14 +165,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/Pesticides"
+                    android:layout_alignEnd="@+id/Pesticides"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="107dp"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="13dp"
+                    android:layout_marginBottom="100dp"
                     android:text="Pesticides"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
 
@@ -219,12 +223,14 @@
                     android:layout_alignEnd="@+id/Fertilizer"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="107dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="98dp"
                     android:text="Fertilizer"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
@@ -270,10 +276,10 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginTop="3dp"
-                    android:text="Agriculture Service"
+                    android:text="Agriculture Service Locations"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
@@ -318,11 +324,14 @@
                     android:layout_alignEnd="@+id/Profile"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginTop="3dp"
-                    android:text="Profile"
+                    android:layout_marginStart="-1dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="1dp"
+                    android:layout_marginBottom="-21dp"
+                    android:text="Update Profile"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
