--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -328,7 +328,7 @@
                     android:layout_marginTop="13dp"
                     android:layout_marginEnd="1dp"
                     android:layout_marginBottom="-21dp"
-                    android:text="Update Profile"
+                    android:text="Profile"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="16sp"
