--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -35,4 +35,13 @@
         android:text="www.ou.ac.lk"
         android:textSize="14sp" />
 
+    <ImageButton
+        android:id="@+id/updateProfileButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@color/transparent_white"
+        android:layout_gravity="right"
+        android:layout_marginTop="-50dp"
+        app:srcCompat="@drawable/baseline_edit_24" />
+
 </LinearLayout>
