--- a/app/src/main/res/drawable/shape_two.xml
+++ b/app/src/main/res/drawable/shape_two.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
    <size android:width="80dp" android:height="80dp"/>
     <corners android:radius="40dp"/>
-    <solid android:color="#D7E0EA"/>
+    <solid android:color="#FFFFFF"/>
     <stroke android:color="#244CDB" android:width="2dp"/>
 
 </shape>
