Change string resources

--- a/app/src/main/res/layout/activity_details_crop.xml
+++ b/app/src/main/res/layout/activity_details_crop.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:letterSpacing="0.1"
-        android:text="Details according to \n the crops"
+        android:text="@string/details_according_to_n_the_crops"
         android:textAlignment="center"
         android:textColor="#EEAF4B"
         android:textSize="15sp"
@@ -56,7 +56,7 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#D7E0EA"
+        android:background="@color/transparent_white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
