--- a/app/src/main/res/layout/activity_pesticides.xml
+++ b/app/src/main/res/layout/activity_pesticides.xml
@@ -27,16 +27,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:letterSpacing="0.3"
-        android:text="Pesticides"
+        android:letterSpacing="0.1"
+        android:text="@string/pesticides"
         android:textColor="#EEAF4B"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.465" />
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -54,7 +54,7 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#D7E0EA"
+        android:background="@color/transparent_white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
@@ -63,7 +63,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/about"
+        android:id="@+id/aboutPest"
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_marginStart="30dp"
@@ -108,7 +108,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="About "
+                    android:text="@string/about"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
@@ -130,7 +130,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about"
+        app:layout_constraintTop_toBottomOf="@+id/aboutPest"
         app:layout_constraintVertical_bias="0.0"
         android:backgroundTint="#00A000">
 
@@ -160,7 +160,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Available Pesticides &amp; Price"
+                    android:text="@string/available_pesticides_n_amp_price"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textAllCaps="false"
@@ -211,7 +211,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Details according to the crop products "
+                    android:text="@string/details_according_to_n_the_crops"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:textAllCaps="false"
