--- a/app/src/main/res/layout/activity_agri_service.xml
+++ b/app/src/main/res/layout/activity_agri_service.xml
@@ -28,17 +28,17 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:letterSpacing="0.1"
-        android:text="Agriculture Services \n Locations"
+        android:text="@string/agriculture_services_n_locations"
         android:textAlignment="center"
         android:textColor="#EEAF4B"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.465" />
+        app:layout_constraintVertical_bias="0.468" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -56,7 +56,7 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#D7E0EA"
+        android:background="@color/transparent_white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
