--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:letterSpacing="0.3"
-            android:text="Welcome"
+            android:text="@string/welcome"
             android:textColor="#EEAF4B"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginTop="10dp"
-            android:text="How can agroPEST help you ?"
+            android:text="@string/how_can_agropest_help_you"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -163,18 +163,18 @@
                     android:src="@drawable/pesticide" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="149dp"
+                    android:layout_height="36dp"
                     android:layout_alignStart="@+id/Pesticides"
                     android:layout_alignEnd="@+id/Pesticides"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="14dp"
+                    android:layout_marginStart="-24dp"
                     android:layout_marginTop="13dp"
-                    android:layout_marginEnd="13dp"
+                    android:layout_marginEnd="-23dp"
                     android:layout_marginBottom="100dp"
-                    android:text="Pesticides"
+                    android:text="@string/pesticides"
+                    android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -227,7 +227,7 @@
                     android:layout_marginTop="13dp"
                     android:layout_marginEnd="0dp"
                     android:layout_marginBottom="98dp"
-                    android:text="Fertilizer"
+                    android:text="@string/fertiliser"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="16sp"
@@ -276,7 +276,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginTop="3dp"
-                    android:text="Agriculture Service Locations"
+                    android:text="@string/agriculture_services_n_locations"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="16sp"
@@ -328,7 +328,7 @@
                     android:layout_marginTop="13dp"
                     android:layout_marginEnd="1dp"
                     android:layout_marginBottom="-21dp"
-                    android:text="Profile"
+                    android:text="@string/profile"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="16sp"
