--- a/app/src/main/res/layout/activity_fertilizer_price.xml
+++ b/app/src/main/res/layout/activity_fertilizer_price.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:letterSpacing="0.1"
-        android:text="Available Fertilizer \n&amp; Price"
+        android:text="@string/available_fertilizer_n_amp_price"
         android:textAlignment="center"
         android:textColor="#EEAF4B"
         android:textSize="15sp"
@@ -56,7 +56,7 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#D7E0EA"
+        android:background="@color/transparent_white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
