--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -52,7 +52,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Profile"
+        android:text="@string/profile"
         android:textColor="#EEAF4B"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -68,7 +68,6 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/transparent_white"
         android:src="@drawable/arrow_left"
-        android:text="Update your details"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -229,7 +228,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="If you want to edit profile ?"
+        android:text="@string/if_you_want_to_edit_profile"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -245,7 +244,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@color/white"
-        android:text="Edit your details"
+        android:text="@string/edit_your_details"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="16sp"
