--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Create Account"
+        android:text="@string/create_account"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +103,7 @@
             android:background="@drawable/edit_text_field"
             android:drawableStart="@drawable/email2"
             android:drawablePadding="10dp"
-            android:hint="Email"
+            android:hint="@string/email"
             android:textColor="@color/black"
             android:textSize="17sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -130,7 +130,7 @@
             android:background="@drawable/edit_text_field"
             android:drawableStart="@drawable/phone"
             android:drawablePadding="10dp"
-            android:hint="Phone number"
+            android:hint="@string/phone_number"
             android:textColor="@color/black"
             android:textSize="17sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -190,7 +190,7 @@
             android:background="@drawable/edit_text_field"
             android:drawableStart="@drawable/lock"
             android:drawablePadding="10dp"
-            android:hint="Confirm Password"
+            android:hint="@string/confirm_password"
             android:inputType="textPassword"
             android:textColor="@color/black"
             android:textSize="17sp"
@@ -204,7 +204,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@color/white"
-        android:text="Register"
+        android:text="@string/register"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -220,7 +220,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:letterSpacing="0"
-        android:text="Existing user! Go to Sign in page"
+        android:text="@string/existing_user_go_to_sign_in_page"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
