--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Update Profile"
+        android:text="@string/edit_your_details"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,7 @@
             android:background="@drawable/edit_text_field"
             android:drawableStart="@drawable/person"
             android:drawablePadding="10dp"
-            android:hint="Name"
+            android:hint="@string/name"
             android:textColor="@color/black"
             android:textSize="17sp" />
 
@@ -105,7 +105,7 @@
             android:background="@drawable/edit_text_field"
             android:drawableStart="@drawable/phone"
             android:drawablePadding="10dp"
-            android:hint="Phone number"
+            android:hint="@string/phone_number"
             android:textColor="@color/black"
             android:textSize="17sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -117,7 +117,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@color/white"
-        android:text="Update Profile"
+        android:text="@string/update_profile"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="16sp"
