--- a/app/src/main/res/layout/activity_agri_service.xml
+++ b/app/src/main/res/layout/activity_agri_service.xml
@@ -78,16 +78,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/items"
         android:layout_width="409dp"
-        android:layout_height="612dp"
+        android:layout_height="550dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="150dp"
         android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.714">
+        app:layout_constraintVertical_bias="0.58000004">
 
     </androidx.recyclerview.widget.RecyclerView>
 
