--- a/app/src/main/res/layout/deatails_crop_products.xml
+++ b/app/src/main/res/layout/deatails_crop_products.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
@@ -22,7 +21,7 @@
         android:text="Name"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="#EEAF4B"
         android:layout_toEndOf="@id/image"
         android:layout_alignParentTop="true" />
 
@@ -44,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/white"
         android:layout_below="@id/image"
         android:layout_marginTop="8dp" />
@@ -55,5 +54,18 @@
         android:background="@drawable/line"
         android:layout_below="@id/description"
         android:layout_marginTop="8dp"/>
+
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/name"
+        android:layout_alignBottom="@+id/name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="-24dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/volume" />
 
 </RelativeLayout>
