--- a/app/src/main/res/layout/activity_about_pesticides.xml
+++ b/app/src/main/res/layout/activity_about_pesticides.xml
@@ -93,6 +93,7 @@
         tools:ignore="MissingConstraints" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginStart="20dp"
@@ -267,5 +268,6 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
